AUTOLAYOUTTTTTTT (fixed all auto layout issues and added custom fonts)

--- a/Koloda/Info.plist
+++ b/Koloda/Info.plist
@@ -39,5 +39,11 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>GothamRounded-Medium.ttf</string>
+		<string>GothamRounded-Light.ttf</string>
+		<string>GothamRounded-Book.ttf</string>
+	</array>
 </dict>
 </plist>
